# taskReaderWriterBoost

./: CMakeLists.txt  README.md  communication_protocol.cpp  communication_protocol.h  shared_memory.cpp  shared_memory.h
client/: CMakeLists.txt  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
